--- a/turbo/generators/templates/turbo.json.hbs
+++ b/turbo/generators/templates/turbo.json.hbs
@@ -2,7 +2,8 @@
   "$schema": "../../node_modules/turbo/schema.json",
   "extends": ["//"],
   "tasks": {
-    "build": { "outputs": ["dist/**"] },
-    "dev": { "persistent": true }
+    "build": {
+      "outputs": ["dist/**"]
+    }
   }
 }
